corrigir filtro entre datas na central de documentos

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -835,7 +835,7 @@
                 <select class="form-select" id="filtroTipoCadastro">
                     <option value="">Todos</option>
                     <option value="Fornecedor">Fornecedor</option>
-                    <option value="Comprador">Cliente</option>
+                    <option value="Cliente">Cliente</option>
                     <option value="Ambos">Ambos (Cliente e Fornecedor)</option>
                 </select>
             </div>
