--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -276,6 +276,9 @@
                     <button id="btnAprovacoes" class="btn btn-warning w-100 btn-dashboard position-relative">
                         <i class="fas fa-check-double"></i> Aprovações Pendentes
                     </button>
+                    <a href="{{ url_for('admin_usuarios') }}" class="btn btn-outline-dark w-100 btn-dashboard mt-2">
+                        <i class="fas fa-users-cog"></i> Gestão de Usuários
+                    </a>
                 </div>
             </div>
         </div>
