--- a/templates/login.html
+++ b/templates/login.html
@@ -43,6 +43,9 @@
             <button type="submit" class="btn btn-primary btn-login">ENTRAR</button>
         </form>
         <div class="text-center mt-3">
+            <a href="{{ url_for('recuperar_senha') }}">Esqueci minha senha</a>
+        </div>
+        <div class="text-center mt-3">
             <small class="text-muted">Versão 1.0 - Acesso Restrito</small>
         </div>
     </div>
